Versão para pontuação de fidelidade
